feat: обновить сервис для работы с HTTP запросами, добавить валидацию, аудит и логирование